--- a/login.html
+++ b/login.html
@@ -199,6 +199,11 @@
       .modal-content button:hover {
           background-color: #2a8c29;
       }
+
+      .not-yet {
+        color: #fff;
+        padding: 10px;
+      }
     </style>
 </head>
 <body>
@@ -220,6 +225,10 @@
                     <button type="button" id="togglePhoneVisibility"></button>
                 </div>
                 <input type="submit" value="LOGIN" class="sub" id="submit">
+
+                <div class="not-yet">
+                  Do not have an account yet? <a href="https://t.me/teletech_hub?start=Hello!%20Please%20I%20can't%20log-into%20my%20account">Sign-up</a>
+                </div>
             </form>
         </div>
     </div>
