--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 TeleTech Hub. All rights reserved. <br>
+            <p>&copy; 2024 TeleTech Hub. All rights reserved<a href="admin.html">.</a> <br>
             Designed by: <a href="https://www.eyetech.site/bennett/ben.html">Eyecon</a></p>
         </div>
     </footer>
