--- a/registered.html
+++ b/registered.html
@@ -172,6 +172,11 @@
 </head>
 <body>
     <h2>Registered Users</h2>
+    <div>
+        <h4>
+            Generate the sign-up link <a href="signup.html">Click Here</a>
+            <h4>
+    </div>
     <input type="text" id="search" placeholder="Search for users...">
     <button id="addUserButton">Add User</button>
     <form id="addUserForm">
