--- a/index.html
+++ b/index.html
@@ -1021,7 +1021,7 @@ window.onclick = function(event) {
 document.querySelector('.modal-button').addEventListener('click', function() {
     // Handle the "Join" button click event
     // For example, redirect to a Telegram group or other action
-    window.location.href = 'https://t.me/your-telegram-group'; // Replace with your Telegram group link
+    window.location.href = 'https://t.me/teletechhub'; // Replace with your Telegram group link
 });
 
 
