--- a/index.html
+++ b/index.html
@@ -783,6 +783,7 @@
         </div>
 
 
+
         <div class="phone-menu">
             <button class="menu-icon">☰</button> <!-- Menu icon -->
             <div class="phone-logo">
@@ -798,17 +799,17 @@
                     <a href="https://t.me/teletech_hub">Registration</a>
                     <a href="login.html">Login</a>
                     <div class="spacer"></div>
-                    <a href="#">Retail Service</a>
-                    <a href="#">IMEI</a>
-                    <a href="#">Server</a>
-                    <a href="#">Reseller Pricing</a>
-                    <a href="#">IMEI Service</a>
-                    <a href="#">Server Service</a>
+                    <a href="denied.html">Retail Service</a>
+                    <a href="denied.html">IMEI</a>
+                    <a href="denied.html">Server</a>
+                    <a href="denied.html">Reseller Pricing</a>
+                    <a href="denied.html">IMEI Service</a>
+                    <a href="denied.html">Server Service</a>
                     <a href="https://t.me/teletechhub">Telegram Channel</a>
-                    <a href="#">Products</a>
-                    <a href="#">Auto Add Funds</a>
+                    <a href="denied.html">Products</a>
+                    <a href="denied.html">Auto Add Funds</a>
                     <a href="https://t.me/teletech_hub">Contact Owner</a>
-                    <a href="#">SCAM ALERT</a>
+                    <a href="denied.html">SCAM ALERT</a>
                 </div>
             </div>
         </div>
@@ -849,15 +850,15 @@
             <div>
                 <img src="imgs/logo.jpg" alt="" width="160px" height="48px">
             </div>
-            <a href="#">Home</a>
+            <a href="https://www.teletechhub.com">Home</a>
             <li class="menu-item dropdown">
-                <a href="#" class="dropdown-toggle">Reseller Pricing <span class="arrow">&#9662;</span></a>
+                <a href="denied.html" class="dropdown-toggle">Reseller Pricing <span class="arrow">&#9662;</span></a>
                 <ul class="dropdown-menu1">
-                    <li><a href="#">IMEI Service</a></li>
-                    <li><a href="#">Server Service</a></li>
+                    <li><a href="denied.html">IMEI Service</a></li>
+                    <li><a href="denied.html">Server Service</a></li>
                 </ul>
             </li>
-            <a href="#">Registration</a>
+            <a href="https://t.me/teletech_hub">Registration</a>
             <a href="https://t.me/teletechhub">⚡Telegram Channel</a>
             <a href="#">Auto Add Funds</a>
             <div class="tablet-control">
@@ -976,9 +977,9 @@
             <div class="footer-section links">
                 <h4>Quick Links</h4>
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#about">About</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">About</a></li>
                     <li><a href="https://t.me/teletechhub">Contact</a></li>
                 </ul>
             </div>
@@ -1002,7 +1003,8 @@
     </footer>
     
     </header>
-    <script>
+    <script>      
+
         document.addEventListener('DOMContentLoaded', function() {
             // Function to display the modal
             function showModal() {
