--- a/welcome.html
+++ b/welcome.html
@@ -67,7 +67,7 @@
                         <a href=""><i class="fas fa-arrow-left back-arrow"></i> TeleTechHub</a>
                     </div>
                     <div class="spacer"></div>
-                    <a href="#">Log-Out</a>
+                    <a href="index.html">Log-Out</a>
                     <div class="spacer"></div>
                     <a href="#">Retail Service</a>
                     <a href="#">IMEI</a>
@@ -97,7 +97,7 @@
             <div>
                 <img src="imgs/logo.jpg" alt="" width="160px" height="48px">
             </div>
-            <a href="#">Home</a>
+            <a href="welcome.html">Home</a>
             <li class="menu-item dropdown">
                 <a href="#" class="dropdown-toggle">Reseller Pricing <span class="arrow">&#9662;</span></a>
                 <ul class="dropdown-menu1">
@@ -105,7 +105,7 @@
                     <li><a href="#">Server Service</a></li>
                 </ul>
             </li>
-            <a href="#">Registration</a>
+            <a href="https://t.me/teletech_hub">Upgrade Membership</a>
             <a href="https://t.me/teletechhub">⚡Telegram Channel</a>
             <a href="#">Auto Add Funds</a>
             <div class="tablet-control">
