--- a/denied.html
+++ b/denied.html
@@ -118,7 +118,7 @@
             <h2>Sign Up for Full Access</h2>
             <p>To enjoy all the features, please sign up or contact the owner for more information.</p>
             <button class="modal-button" onclick="window.location.href='https://t.me/teletech_hub'">Sign Up Now!</button>
-            <button class="modal-button" onclick="window.location.href='https://wa.me/qr/3JMHLF4XB3L7H1'">Contact Owner</button>
+            <button class="modal-button" onclick="window.location.href='login.html'">Login</button>
         </div>
     </div>
 
