--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@
             </li>
             <a href="https://t.me/teletech_hub">Registration</a>
             <a href="https://t.me/teletechhub">⚡Telegram Channel</a>
-            <a href="#">Auto Add Funds</a>
+            <a href="denied.html">Auto Add Funds</a>
             <div class="tablet-control">
             <a href="https://t.me/teletech_hub">Contact Owner</a>
             </div>
@@ -997,8 +997,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 TeleTech Hub. All rights reserved<a href="admin.html">.</a> <br>
-            Developer: <a href="https://www.eyetech.site/bennett/ben.html">Eyecon</a></p>
+            <p>&copy; 2024 TeleTech Hub. All rights reserved<a href="admin.html">.</a>
         </div>
     </footer>
     
