--- a/welcome.html
+++ b/welcome.html
@@ -141,13 +141,13 @@
             <div class="div1">
                 <div class="current-balance">
                     <h2>Your Current Balance</h2>
-                    <p class="figure">$500.00</p>
+                    <p class="figure">$0.00</p>
                     <button><i class="fas fa-shopping-cart"></i> Buy Credit</button>
                 </div>
             </div>
             <div class="div2">
                 <h2>Unpaid Balance</h2>
-                <p class="figure">$150.00</p>
+                <p class="figure">$0.00</p>
             </div>
             <div class="div3">
                 <h2>Announcements</h2>
@@ -167,7 +167,7 @@
             <div class="div4">
                 <div class="left">
                     <h2>Total Receipts</h2>
-                    <p class="figure">$1000.00</p>
+                    <p class="figure">$0.00</p>
                 </div>
                 <div class="right">
                     <h2>Locked Account</h2>
@@ -176,15 +176,15 @@
             </div>
             <div class="div5">
                 <h2>Orders Placed Successfully</h2>
-                <p class="figure">0/1</p>
+                <p class="figure">0/0</p>
             </div>
             <div class="div6">
                 <h2>Orders in Process</h2>
-                <p class="figure">1/1</p>
+                <p class="figure">0/0</p>
             </div>
             <div class="div7">
                 <h2>Orders Process Fails</h2>
-                <p class="figure">0/1</p>
+                <p class="figure">0/0</p>
             </div>
         </section>
 
@@ -217,8 +217,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 TeleTech Hub. All rights reserved. <br>
-            Designed by: <a href="https://www.eyetech.site/bennett/ben.html">Eyecon</a></p>
+            <p>&copy; 2024 TeleTech Hub. All rights reserved.
         </div>
     </footer>
     
