--- a/welcome.html
+++ b/welcome.html
@@ -70,7 +70,7 @@
                     <a href="index.html">Log-Out</a>
                     <div class="spacer"></div>
                     <a href="#">Retail Service</a>
-                    <a href="#">IMEI</a>
+                    <a href="imei.html">IMEI</a>
                     <a href="#">Server</a>
                     <a href="#">Reseller Pricing</a>
                     <a href="#">IMEI Service</a>
@@ -97,15 +97,23 @@
             <div>
                 <img src="imgs/logo.jpg" alt="" width="160px" height="48px">
             </div>
-            <a href="welcome.html">Home</a>
+            <a href="welcome.html">Client Area</a>
             <li class="menu-item dropdown">
-                <a href="#" class="dropdown-toggle">Reseller Pricing <span class="arrow">&#9662;</span></a>
+                <a href="#" class="dropdown-toggle">Place Order <span class="arrow">&#9662;</span></a>
                 <ul class="dropdown-menu1">
-                    <li><a href="#">IMEI Service</a></li>
+                    <li><a href="imei.html">IMEI Service</a></li>
                     <li><a href="#">Server Service</a></li>
                 </ul>
             </li>
-            <a href="https://t.me/teletech_hub">Upgrade Membership</a>
+            <li class="menu-item dropdown">
+                <a href="#" class="dropdown-toggle">Order History <span class="arrow">&#9662;</span></a>
+                <ul class="dropdown-menu2">
+                    <li class="imei-order"><a href="#" id="imei-orders">IMEI Orders</a></li>
+                    <li class="server-order"><a href="#" id="servers-orders">Servers Orders</a></li>
+                    <li class="retail-order"><a href="#" id="retail-orders">Retail Orders</a></li>
+                    <li class="advanced-history"><a href="#" id="advanced-history">Advanced History</a></li>
+                </ul>
+            </li>            
             <a href="https://t.me/teletechhub">⚡Telegram Channel</a>
             <a href="#">Auto Add Funds</a>
             <div class="tablet-control">
