--- a/welcome.html
+++ b/welcome.html
@@ -66,19 +66,25 @@
                     <div class="menu-top">
                         <a href=""><i class="fas fa-arrow-left back-arrow"></i> TeleTechHub</a>
                     </div>
-                    <div class="spacer"></div>
+
                     <a href="index.html">Log-Out</a>
-                    <div class="spacer"></div>
-                    <a href="#">Retail Service</a>
-                    <a href="imei.html">IMEI</a>
-                    <a href="#">Server</a>
-                    <a href="#">Reseller Pricing</a>
-                    <a href="#">IMEI Service</a>
-                    <a href="#">Server Service</a>
-                    <a href="https://t.me/teletechhub">Telegram Channel</a>
-                    <a href="#">Products</a>
+                    
+                    <div>
+                        PLACE ORDER
+                    </div>
+                    <a href="imei.html">IMEI Service</a>
+                    <a href="imei.html">Server Services</a>
+                    <div>
+                        ORDER HISTORY
+                    </div>
+                    <a href="orders.html">IMEI Orders</a>
+                    <a href="order.html">Server Orders</a>
+                    <a href="#">Retail Orders</a>
                     <a href="#">Auto Add Funds</a>
                     <a href="https://wa.me/qr/3JMHLF4XB3L7H1">Contact Owner</a>
+                    <a href="#">Advanced History</a>
+                    <a href="https://t.me/teletechhub">Telegram Channel</a>
+                    <a href="#">Products</a>
                     <a href="#">SCAM ALERT</a>
                 </div>
             </div>
@@ -108,8 +114,8 @@
             <li class="menu-item dropdown">
                 <a href="#" class="dropdown-toggle">Order History <span class="arrow">&#9662;</span></a>
                 <ul class="dropdown-menu2">
-                    <li class="imei-order"><a href="#" id="imei-orders">IMEI Orders</a></li>
-                    <li class="server-order"><a href="#" id="servers-orders">Servers Orders</a></li>
+                    <li class="imei-order"><a href="orders.html" id="imei-orders">IMEI Orders</a></li>
+                    <li class="server-order"><a href="order.html" id="servers-orders">Servers Orders</a></li>
                     <li class="retail-order"><a href="#" id="retail-orders">Retail Orders</a></li>
                     <li class="advanced-history"><a href="#" id="advanced-history">Advanced History</a></li>
                 </ul>
