--- a/welcome.html
+++ b/welcome.html
@@ -80,7 +80,7 @@
                     <a href="orders.html">IMEI Orders</a>
                     <a href="order.html">Server Orders</a>
                     <a href="#">Retail Orders</a>
-                    <a href="#">Auto Add Funds</a>
+                    <a href="fund.html">Auto Add Funds</a>
                     <a href="https://wa.me/qr/3JMHLF4XB3L7H1">Contact Owner</a>
                     <a href="#">Advanced History</a>
                     <a href="https://t.me/teletechhub">Telegram Channel</a>
@@ -121,7 +121,7 @@
                 </ul>
             </li>            
             <a href="https://t.me/teletechhub">⚡Telegram Channel</a>
-            <a href="#">Auto Add Funds</a>
+            <a href="fund.html">Auto Add Funds</a>
             <div class="tablet-control">
             <a href="https://t.me/teletech_hub">Contact Owner</a>
             </div>
