--- a/fund.html
+++ b/fund.html
@@ -417,8 +417,7 @@
             </div>
 
             <div class="pay-now">
-                <button>Pay Now</button>
-                <a href="javascript:void(0);" onclick="goToFund2()">Pay Now →</a>
+                <button><a href="javascript:void(0);" onclick="goToFund2()">Pay Now →</a></button>
             </div>
 
             <div class="footer">
@@ -431,13 +430,6 @@
 <!-- Fund2.html Section (Initially Hidden) -->
 <div id="fund2-section" class="container hidden">
     <h2>Pending Payment</h2>
-
-    <div class="info-block">
-        <strong>Email:</strong>
-        <div class="copyable" onclick="copyText('email')">
-            ahllnytl@gmail.com
-        </div>
-    </div>
 
     <div class="info-block">
         <strong>Credits you receive:</strong>
