--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
                 <a href="mailto:teletechhub.ishop.us@gmail.com" class="icon"><i class="fas fa-envelope"></i></a>
             </div>
             <div class="country-selector">
-                <button class="country-btn">🌍US</button> <!-- Flag icon or globe icon -->
+                <button class="country-btn">🌍EN</button> <!-- Flag icon or globe icon -->
                 <div class="language-drop">
                     <ul>
                         <li data-lang="en"><img src="flags/en.png" alt="English"> English</li>
