--- a/denied.html
+++ b/denied.html
@@ -117,7 +117,7 @@
             <span class="close-button">&times;</span>
             <h2>Sign Up for Full Access</h2>
             <p>To enjoy all the features, please sign up or contact the owner for more information.</p>
-            <button class="modal-button" onclick="window.location.href='https://t.me/teletech_hub'">Sign Up Now!</button>
+            <button class="modal-button" onclick="window.location.href='process.html'">Sign Up Now!</button>
             <button class="modal-button" onclick="window.location.href='login.html'">Login</button>
         </div>
     </div>
