--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
                         <a href=""><i class="fas fa-arrow-left back-arrow"></i> TeleTechHub</a>
                     </div>
                     <div class="spacer"></div>
-                    <a href="https://t.me/teletech_hub">Registration</a>
+                    <a href="process.html">Sign-up</a>
                     <a href="login.html">Login</a>
                     <div class="spacer"></div>
                     <a href="denied.html">Retail Service</a>
@@ -858,7 +858,7 @@
                     <li><a href="denied.html">Server Service</a></li>
                 </ul>
             </li>
-            <a href="https://t.me/teletech_hub">Registration</a>
+            <a href="process.html">Registration</a>
             <a href="https://t.me/teletechhub">⚡Telegram Channel</a>
             <a href="denied.html">Auto Add Funds</a>
             <div class="tablet-control">
