--- a/fund.html
+++ b/fund.html
@@ -214,6 +214,10 @@ button:hover {
     color: #856404;
 }
 
+.net111 {
+    background-color: #0000FF;
+}
+
 /* Payment Forms Styles */
 .payment-details {
     margin-bottom: 20px;
@@ -427,8 +431,8 @@ button:hover {
 
         <!-- Company Logo and Address -->
         <div class="receipt-details">
-            <img src="logo.jpg" alt="Company Logo"> <!-- Replace 'logo.jpg' with your actual logo path -->
-            <p>401, Allien Street, Red Planet. 44435334</p>
+            <img src="imgs/logo.jpg" alt="Company Logo", width="430"> <!-- Replace 'logo.jpg' with your actual logo path -->
+            <p>F5CX+XJX Homewood, Alabama, USA</p>
         </div>
 
         <!-- Receipt Information -->
@@ -514,13 +518,16 @@ button:hover {
 
         <!-- Binance ID -->
         <div class="copyable">
+            <h4>
+                Binance ID:
+            </h4>
             <span id="binance-id">976270661</span>
             <i class="fas fa-copy" onclick="copyText('binance-id')"></i>
         </div>
         <p>Click on the ID above to copy.</p>
 
         <!-- Network Type -->
-        <p>Network type: TRC20</p>
+        <p>Network type: <br> <div class="net111"> TRC20 </div></p>
 
         <!-- Amount to Send -->
         <div class="copyable">
@@ -555,13 +562,16 @@ button:hover {
 
         <!-- Wallet Address -->
         <div class="copyable">
+            <h4>
+                Wallet Address
+            </h4>
             <span id="usdt-wallet">TLNEJmdL1rCKbECUhGxVbEChedV6o68eFU</span>
             <i class="fas fa-copy" onclick="copyText('usdt-wallet')"></i>
         </div>
         <p>Click on the ID above to copy.</p>
 
         <!-- Network Type -->
-        <p>Network type: TRC20</p>
+        <p>Network type: <br> <div class="net111"> TRC20 </div></p>
 
         <!-- Amount to Send -->
         <div class="copyable">
@@ -596,13 +606,16 @@ button:hover {
 
         <!-- Skrill Email Address -->
         <div class="copyable">
+            <h4>
+                Skrill Email Address
+            </h4>
             <span id="skrill-email">unlockmyapple3@gmail.com</span>
             <i class="fas fa-copy" onclick="copyText('skrill-email')"></i>
         </div>
         <p>Click on the ID above to copy.</p>
 
         <!-- Network Type -->
-        <p>Network type: TRC20</p>
+        <p>Network type: <br> <div class="net111"> TRC20 </div></p>
 
         <!-- Amount to Send -->
         <div class="copyable">
