--- a/fund.html
+++ b/fund.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multi-Step Add Funds</title>
+    <title>Add Funds</title>
     <!-- Font Awesome for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTTXAB0EaipCcBqM3bR+14+1+qmc0z1B2fFJvFf0ueM2VajcXc9R1eCyp8ZKjLrAOKs1QkC1Yw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
@@ -431,7 +431,7 @@ button:hover {
 
         <!-- Company Logo and Address -->
         <div class="receipt-details">
-            <img src="imgs/logo.jpg" alt="Company Logo", width="430"> <!-- Replace 'logo.jpg' with your actual logo path -->
+            <img src="imgs/logo.jpg" alt="Company Logo", width="250"> <!-- Replace 'logo.jpg' with your actual logo path -->
             <p>F5CX+XJX Homewood, Alabama, USA</p>
         </div>
 
@@ -517,10 +517,12 @@ button:hover {
         <p>Pending Payment <div class="spinner"></div></p>
 
         <!-- Binance ID -->
-        <div class="copyable">
+        <div>
             <h4>
                 Binance ID:
             </h4>
+        </div>
+        <div class="copyable">
             <span id="binance-id">976270661</span>
             <i class="fas fa-copy" onclick="copyText('binance-id')"></i>
         </div>
@@ -561,10 +563,12 @@ button:hover {
         <p>Pending Payment <div class="spinner"></div></p>
 
         <!-- Wallet Address -->
-        <div class="copyable">
+        <div>
             <h4>
-                Wallet Address
+                Wallet Address:
             </h4>
+        </div>
+        <div class="copyable">
             <span id="usdt-wallet">TLNEJmdL1rCKbECUhGxVbEChedV6o68eFU</span>
             <i class="fas fa-copy" onclick="copyText('usdt-wallet')"></i>
         </div>
@@ -605,10 +609,12 @@ button:hover {
         <p>Pending Payment <div class="spinner"></div></p>
 
         <!-- Skrill Email Address -->
-        <div class="copyable">
+        <div>
             <h4>
-                Skrill Email Address
+                Skrill Email Address:
             </h4>
+        </div>
+        <div class="copyable">
             <span id="skrill-email">unlockmyapple3@gmail.com</span>
             <i class="fas fa-copy" onclick="copyText('skrill-email')"></i>
         </div>
