--- a/imei.html
+++ b/imei.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Order History</title>
+    <title>IMEI Orders</title>
     <style>
         /* General Styles */
         body {
@@ -244,7 +244,7 @@
 
         <div class="export-buttons">
             <button></button>
-            <button>ICLOUD CLEN SERVICE 98% SUCCESS RATE</button>
+            <button>ICLOUD CLEAN SERVICE 98% SUCCESS RATE</button>
             <button></button>
         </div>
 
