--- a/welcome.html
+++ b/welcome.html
@@ -35,7 +35,7 @@
                 <a href="mailto:teletechhub.ishop.us@gmail.com" class="icon"><i class="fas fa-envelope"></i></a>
             </div>
             <div class="country-selector">
-                <button class="country-btn">🌍</button> <!-- Flag icon or globe icon -->
+                <button class="country-btn">🌍EN</button> <!-- Flag icon or globe icon -->
                 <div class="language-drop">
                     <ul>
                         <li data-lang="en"><img src="flags/en.png" alt="English"> English</li>
@@ -73,7 +73,7 @@
                         PLACE ORDER
                     </div>
                     <a href="imei.html">IMEI Service</a>
-                    <a href="imei.html">Server Services</a>
+                    <a href="server.html">Server Services</a>
                     <div>
                         ORDER HISTORY
                     </div>
