--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TeleTech Hub</title>
+    <title>TeleTech Hub - Sign up</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         /* Reset and basic styling */
