--- a/welcome.html
+++ b/welcome.html
@@ -108,7 +108,7 @@
                 <a href="#" class="dropdown-toggle">Place Order <span class="arrow">&#9662;</span></a>
                 <ul class="dropdown-menu1">
                     <li><a href="imei.html">IMEI Service</a></li>
-                    <li><a href="#">Server Service</a></li>
+                    <li><a href="server.html">Server Service</a></li>
                 </ul>
             </li>
             <li class="menu-item dropdown">
