--- a/login.html
+++ b/login.html
@@ -227,7 +227,7 @@
                 <input type="submit" value="LOGIN" class="sub" id="submit">
 
                 <div class="not-yet">
-                  Do not have an account yet? <a href="https://t.me/teletech_hub?start=Hello!%20Please%20I%20can't%20log-into%20my%20account">Sign-up</a>
+                  Do not have an account yet? <a href="process.html">Sign-up</a>
                 </div>
             </form>
         </div>
@@ -327,7 +327,7 @@
                 });
 
                 document.getElementById("signupButton").addEventListener('click', function() {
-                    window.location.href = "https://t.me/teletech_hub?start=Hello!%20Please%20I%20want%20to%20sign%20up"; // Redirect to sign up page
+                    window.location.href = "process.html"; // Redirect to sign up page
                 });
     </script>
     
