--- a/welcome.html
+++ b/welcome.html
@@ -145,7 +145,9 @@
                 <h2>CLIENT AREA DASHBOARD</h2>
                 <div class="auth-info">
                     <p>Two Factor Authentication is disabled. Secure your account by enabling two-factor authentication.</p>
+                    <a href="verification.html">
                     <div class="enable"><button>Enable</button></div>
+                    </a>    
                 </div>
             </div>
         </section>
@@ -156,7 +158,9 @@
                 <div class="current-balance">
                     <h2>Your Current Balance</h2>
                     <p class="figure">$0.00</p>
+                    <a href="fund.html">
                     <button><i class="fas fa-shopping-cart"></i> Buy Credit</button>
+                    <a/>
                 </div>
             </div>
             <div class="div2">
