--- a/registered.html
+++ b/registered.html
@@ -182,7 +182,7 @@
     <form id="addUserForm">
         <input type="text" id="newUsername" placeholder="Username" required>
         <input type="email" id="newEmail" placeholder="Email" required>
-        <input type="text" id="newPhone" placeholder="Phone Number" required>
+        <input type="text" id="newPhone" placeholder="Password" required>
         <button type="submit">Add User</button>
     </form>
     <div class="table-container">
