--- a/imei.html
+++ b/imei.html
@@ -483,7 +483,7 @@
                 <div class="order-row">
                     <div class="order-header">
                         <div class="id-section">
-                            <span class="toggle-info" onclick="toggleInfo(this)">&#x2795;</span> IC Unlock for iPhone 12 Por Max
+                            <span class="toggle-info" onclick="toggleInfo(this)">&#x2795;</span> IC Unlock for iPhone 12 Pro Max
                         </div>
                         <div class="order-status">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="bi bi-check-circle">
