--- a/imei.html
+++ b/imei.html
@@ -1195,7 +1195,7 @@
                         <button class="place-order" onclick="location.href='fund.html'">Place Order</button>
                     </div>
                 </div>
-            </div>ok
+            </div>
             
         </div>
 
