--- a/fund.html
+++ b/fund.html
@@ -523,7 +523,7 @@ button:hover {
             </h4>
         </div>
         <div class="copyable">
-            <span id="binance-id">976270661</span>
+            <span id="binance-id">NOT AVAILABLE</span>
             <i class="fas fa-copy" onclick="copyText('binance-id')"></i>
         </div>
         <p>Click on the ID above to copy.</p>
